--- a/lemon-biochip.html
+++ b/lemon-biochip.html
@@ -2,55 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Lemon Biochip | Age Industry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The Lemon Biochip by Age Industry is a breakthrough in biocompatible adaptive sensing.">
+  <title>The Lemon Biochip</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f7fa;
       margin: 0;
-      padding: 40px;
+      padding: 0;
+      background-image: url('BDDAAADA-3BD2-483D-A864-CBB58358D06A.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      font-family: Arial, sans-serif;
+      color: white;
     }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      background: white;
+
+    .content {
+      background-color: rgba(0, 0, 0, 0.65);
       padding: 40px;
+      max-width: 800px;
+      margin: 60px auto;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      line-height: 1.6;
     }
-    h1 {
-      color: #2c3e50;
-      font-size: 2.5rem;
+
+    h1, h2 {
+      color: #ffff66;
     }
-    h2 {
-      margin-top: 40px;
-      color: #333;
-    }
-    p {
-      font-size: 1.1rem;
-      line-height: 1.7;
-    }
+
     ul {
-      margin-top: 10px;
       padding-left: 20px;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 0.95rem;
-      color: #888;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="content">
     <h1>The Lemon Biochip</h1>
-    <p><em>Developed by Age Industry</em></p>
-
-    <p>
-      The Lemon Biochip is a biocompatible microdevice designed for low-power sensing and adaptive response in biological systems. Built to bridge human physiology with responsive technologies, Lemon introduces a new layer of intelligent feedback into health monitoring and biosignal integration.
-    </p>
+    <em>Developed by Age Industry</em>
+    <p>The Lemon Biochip is a biocompatible microdevice designed for low-power sensing and adaptive response in biological systems. Built to bridge human physiology with responsive technologies, Lemon introduces a new layer of intelligent feedback into health monitoring and biosignal integration.</p>
 
     <h2>Highlights</h2>
     <ul>
@@ -60,13 +48,9 @@
     </ul>
 
     <h2>Development</h2>
-    <p>
-      Currently under early-stage prototyping, Lemon is being evaluated for real-time health tracking, tissue recovery diagnostics, and integration with age-responsive systems.
-    </p>
+    <p>Currently under early-stage prototyping, Lemon is being evaluated for real-time health tracking, tissue recovery diagnostics, and integration with age-responsive systems.</p>
 
-    <footer>
-      © 2025 Age Industry | For inquiries: sosovanarith3@gmail.com
-    </footer>
+    <p>© 2025 Age Industry</p>
   </div>
 </body>
 </html>
