--- a/lemon-biochip.html
+++ b/lemon-biochip.html
@@ -32,6 +32,30 @@
     ul {
       padding-left: 20px;
     }
+
+    .back {
+      display: inline-block;
+      margin-top: 20px;
+      color: #00ffcc;
+      text-decoration: none;
+    }
+
+    .back:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 600px) {
+      .content {
+        margin: 20px auto;
+        padding: 20px;
+      }
+      h1 {
+        font-size: 1.5em;
+      }
+      h2 {
+        font-size: 1.2em;
+      }
+    }
   </style>
 </head>
 <body>
@@ -50,6 +74,7 @@
     <h2>Development</h2>
     <p>Currently under early-stage prototyping, Lemon is being evaluated for real-time health tracking, tissue recovery diagnostics, and integration with age-responsive systems.</p>
 
+    <a class="back" href="index.html">← Back to Home</a>
     <p>© 2025 Age Industry</p>
   </div>
 </body>
