--- a/lemon-biochip.html
+++ b/lemon-biochip.html
@@ -62,6 +62,7 @@
   <div class="content">
     <h1>The Lemon Biochip</h1>
     <em>Developed by Age Industry</em>
+    <p>Created by Sovanarith So</p>
     <p>The Lemon Biochip is a biocompatible microdevice designed for low-power sensing and adaptive response in biological systems. Built to bridge human physiology with responsive technologies, Lemon introduces a new layer of intelligent feedback into health monitoring and biosignal integration.</p>
 
     <h2>Highlights</h2>
@@ -73,6 +74,9 @@
 
     <h2>Development</h2>
     <p>Currently under early-stage prototyping, Lemon is being evaluated for real-time health tracking, tissue recovery diagnostics, and integration with age-responsive systems.</p>
+
+    <h2>Inventor and Researcher</h2>
+    <p>Sovanarith So, the visionary behind the Lemon Biochip, is driving innovation in biochip technology with a focus on practical applications in health and agriculture. His research continues to shape the future of responsive biological systems.</p>
 
     <a class="back" href="index.html">← Back to Home</a>
     <p>© 2025 Age Industry</p>
